# cargo-tracking-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: input.csv  input.json  output.json
fixtures/: air_080-38652331.html  air_999-88887777_semi.html  container_TLLU4912250.html  index.json
src/tracking_agent/: cli.py  config.py
src/tracking_agent/api/: app.py  routes.py  web.py
src/tracking_agent/connectors/: base.py  cargoai.py  carrier_website.py  fixture.py  registry.py  track_trace_air.py  track_trace_container.py
src/tracking_agent/detection/: awb_prefixes.py  detector.py
src/tracking_agent/export/: excel.py  sheets.py
src/tracking_agent/llm/: assistant.py
src/tracking_agent/models/: enums.py  schemas.py
src/tracking_agent/normalization/: normalizer.py  (+3 more)
tests/: test_cli.py  test_config.py
tests/api/: test_routes.py
tests/connectors/: test_base.py  test_fixture.py  test_track_trace_live.py
tests/detection/: test_detector.py
tests/export/: test_excel.py  test_input_columns.py
tests/llm/: test_assistant.py
tests/models/: test_enums.py  test_schemas.py
tests/normalization/: test_normalizer.py
tests/parsers/: test_dates.py  test_track_trace_parser.py
tests/pipeline/: test_builder.py  test_input_hints.py  test_orchestrator.py  test_orchestrator_llm.py  test_queue.py  test_resilience.py  test_router.py
tests/quality/: test_risk.py  test_scorer.py
tests/scheduler/: test_recheck.py
tests/storage/: test_cache.py  test_debug.py  test_history.py
tests/webhook/: test_notifier.py
(+15 files in other folders)
