[project]
name = "tracking-agent"
version = "0.1.0"
description = "AWB and sea-container tracking service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "playwright>=1.44",
  "beautifulsoup4>=4.12",
  "apscheduler>=3.10",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
sheets = ["google-api-python-client>=2.0", "google-auth>=2.0"]

[project.scripts]
tracking-agent = "tracking_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
